# agent-auditor

./: .gitignore  Cargo.toml  README.md  README_ja.md
cmd/agent-auditor-controld/: Cargo.toml
cmd/agent-auditor-controld/src/: main.rs
cmd/agent-auditor-controld/tests/: control_plane_smoke.rs
cmd/agent-auditor-hostd/: Cargo.toml
cmd/agent-auditor-hostd/src/: daemon.rs  lib.rs  main.rs  runtime.rs
cmd/agent-auditor-hostd/src/poc/: contract.rs  event_path.rs  loader.rs  mod.rs  persistence.rs  process_live.rs
cmd/agent-auditor-hostd/src/poc/browser/: classify.rs  contract.rs  evaluate.rs  mod.rs  record.rs  session_linkage.rs
cmd/agent-auditor-hostd/src/poc/enforcement/: audit.rs  contract.rs  decision.rs  deny.rs  hold.rs  (+1 more)
cmd/agent-auditor-hostd/tests/: daemon_mode.rs  filesystem_enforcement_smoke.rs  forward_proxy_ingress_smoke.rs  generic_rest_governance_smoke.rs  github_semantic_governance_smoke.rs  github_validated_observation_smoke.rs  gws_enforcement_smoke.rs  gws_poc_smoke.rs  hermes_discord_policy_audit_integration.rs  live_observation_diff_smoke.rs  live_process_slice.rs  live_proxy_seam_smoke.rs  messaging_governance_smoke.rs  messaging_observed_smoke.rs  network_poc_smoke.rs  poc_smoke.rs  process_enforcement_smoke.rs  provider_abstraction_smoke.rs  secret_poc_smoke.rs  service_artifacts.rs  state_dir.rs
cmd/agent-auditor-hostd/tests/common/: mod.rs
cmd/agent-auditor-hostd/tests/fixtures/: hostd-filesystem-enforcement-smoke-fixtures.json  hostd-generic-rest-governance-smoke-fixtures.json  hostd-github-semantic-governance-smoke-fixtures.json  hostd-gws-smoke-fixtures.json  hostd-messaging-governance-smoke-fixtures.json  hostd-network-smoke-fixtures.json  hostd-process-enforcement-smoke-fixtures.json  hostd-provider-abstraction-smoke-fixtures.json  hostd-secret-smoke-fixtures.json  hostd-smoke-fixtures.json
crates/agenta-policy/: Cargo.toml
crates/agenta-policy/src/: lib.rs
(+209 files in other folders)
