[workspace]
resolver = "2"
members = [
  "cmd/agent-auditor-cli",
  "cmd/agent-auditor-controld",
  "cmd/agent-auditor-hostd",
  "cmd/agent-auditor-hostd-ebpf",
  "crates/agenta-core",
  "crates/agenta-policy",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = "0.13.1"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
signal-hook = "0.3.18"
thiserror = "2.0.17"
