[package]
name = "agent-auditor-hostd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
agenta-core = { path = "../../crates/agenta-core" }
agenta-policy = { path = "../../crates/agenta-policy" }
agent-auditor-hostd-ebpf = { path = "../agent-auditor-hostd-ebpf" }
aya.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
libc = "0.2.177"
