[package]
name = "agenta-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
agenta-core = { path = "../agenta-core" }
chrono.workspace = true
regorus = "0.5.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
